--- a/global_app/templates/global_base.html
+++ b/global_app/templates/global_base.html
@@ -9,12 +9,15 @@
 {% block body_class %}get-the-detail{% endblock %}
 
 
+<!-- TODO: This is duplicated? And also in bad shape for the newer bootstrap
 {% block nav %}
-<li><a class="get-the-idea toggle-tooltip bottom" title="{% trans "Get&nbsp;the&nbsp;idea" %}" href="/get-the-idea/">{% trans "Get the idea" %}</a></li>
-<li class="active"><a class="get-the-detail toggle-tooltip bottom" title="{% trans "Get&nbsp;the&nbsp;detail" %}" href="/get-the-detail/">{% trans "Get the detail" %}</a></li>
-<li><a class="get-involved toggle-tooltip bottom" title="{% trans "Get&nbsp;involved" %}" href="/get-involved/">{% trans "Get involved" %}</a></li>
-<li><a class="about toggle-tooltip bottom" title="{% trans "About" %}" href="/about/">{% trans "About" %}</a></li>
+    <li><a class="get-the-idea toggle-tooltip bottom" title="{% trans "Get&nbsp;the&nbsp;idea" %}" href="/get-the-idea/">{% trans "Get the idea" %}</a></li>
+    <li class="active"><a class="get-the-detail toggle-tooltip bottom" title="{% trans "Get&nbsp;the&nbsp;detail" %}" href="/get-the-detail/">{% trans "Get the detail" %}</a></li>
+    <li><a class="get-involved toggle-tooltip bottom" title="{% trans "Get&nbsp;involved" %}" href="/get-involved/">{% trans "Get involved" %}</a></li>
+    <li><a class="about toggle-tooltip bottom" title="{% trans "About" %}" href="/about/">{% trans "About" %}</a></li>
 {% endblock %}
+
+-->
 
 {% block subnav %}
 <div class="row title entry-point">
