--- a/maplandmatrix/templates/index.html
+++ b/maplandmatrix/templates/index.html
@@ -214,6 +214,8 @@
         </div>
     </div>
 
+    <div id="alert_placeholder"></div>
+
     <div id="map" class="map" title='All Deals'></div>
 
     <div id="popup" class="ol-popup">
