--- a/templates/base.html
+++ b/templates/base.html
@@ -13,15 +13,22 @@
     <meta name="description" content="
 
 
+
+
+
             {% if meta_description %}{{ meta_description }}{% else %}{% trans "Landmatrix" %}{% trans 'Default description' %}{% endif %}"/>
     <meta name="keywords" content="
+
+
+
 
 
             {% if meta_keywords %}{{ meta_keywords }}{% else %}{% trans "Landmatrix" %}{% trans 'Default keywords' %}{% endif %}"/>
     <meta name="viewport" content="width=device-width">
 
     <link rel="stylesheet" href="/media/js/vendor/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/media/js/vendor/bootstrap/dist/css/bootstrap-theme.min.css">
+    <!-- <link rel="stylesheet" href="/media/js/vendor/bootstrap/dist/css/bootstrap-theme.min.css"> -->
+    <link rel="stylesheet" href="/media/js/vendor/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="/media/css/legacy/main.css">
     <link rel="stylesheet" href="/media/css/legacy/content.css">
     <link rel="icon" href="/media/img/favicon.ico">
@@ -46,7 +53,7 @@
 {% cms_toolbar %}
 
 
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<div class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
 
 
@@ -56,7 +63,7 @@
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                        data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        data-target="#main-navbar-collapse" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -65,107 +72,164 @@
                 <a class="navbar-brand brand" href="/"></a>
             </div>
 
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            {% block nav %}
-                <ul class="nav navbar-nav">
+            <div class="collapse navbar-collapse" id="main-navbar-collapse">
+                <ul class="nav navbar-nav navbar-left">
+                    <li><a href="/global"><span class="fa-spacer fa-globe"></span>Global</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                           aria-expanded="false"><span class="fa-spacer fa-map-marker"></span>Regions <span
+                                class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <form role="form">
+                                    <div class="form-group has-feedback">
+                                        <input type="text" class="form-control" placeholder="Search countries" />
+                                        <i class="form-control-feedback glyphicon glyphicon-search"></i>
+                                    </div>
+                                </form>
+                            </li>
+                            <li role="separator" class="divider"></li>
+                            <li>Region 1</li>
+                            <li role="separator" class="divider"></li>
+                            <li>Region 2</li>
+                            <li role="separator" class="divider"></li>
+                            <li>Region 3</li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                           aria-expanded="false"><span class="fa-spacer fa-flag"></span>Countries <span
+                                class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <form role="form">
+                                    <div class="form-group has-feedback">
+                                        <input type="text" class="form-control" placeholder="Search countries" />
+                                        <i class="form-control-feedback glyphicon glyphicon-search"></i>
+                                    </div>
+                                </form>
+                            </li>
+                            <li role="separator" class="divider"></li>
+                            <li>Country 1</li>
+                            <li role="separator" class="divider"></li>
+                            <li>Country 2</li>
+                            <li role="separator" class="divider"></li>
+                            <li>Country 3</li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                           aria-expanded="false"><span class="fa-spacer fa-plus-circle"></span>Get Involved <span
+                                class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li>Report a deal</li>
+                            <li role="separator" class="divider"></li>
+                            <li>Get in touch</li>
+                            <li role="separator" class="divider"></li>
+                            <li>Download</li>
+                        </ul>
+                    </li>
 
-                    {% load menu_tags %}
-                    {% show_menu 1 1 0 0 "menu.html" %}
 
                 </ul>
-            {% endblock %}
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#"><span class="badge">?</span></a></li>
+                    <li><a href="#"><span class="badge"><span class="fa fa-envelope"></span></span></a></li>
+                    <li><a href="#"><span class="badge">en</span></a></li>
+                </ul>
             </div>
 
             {% block user_tools %}{% endblock %}
         {% endblock %}
-        </div>
     </div>
+</div>
 
-    <div class="wrap">
-        <!--[if lt IE 7]>
+<div class="wrap">
+    <!--[if lt IE 7]>
                 <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
             <![endif]-->
 
-        {# top-level navigation #}
-        {# This code is taken from http://twitter.github.com/bootstrap/examples/hero.html #}
+    {# top-level navigation #}
+    {# This code is taken from http://twitter.github.com/bootstrap/examples/hero.html #}
 
-        <div class="container">
+    <div class="container">
 
-            {% block messages %}
-                <ul class="unstyled messages">
-                    {% for message in messages %}
-                        <li class="alert{% if message.tags %} alert-{{ message.tags }}{% endif %}">
-                            <strong>{{ message.tags|capfirst }}:</strong> {{ message|safe }}</li>
-                    {% endfor %}
-                    {% block extra_messages %}{% endblock %}
-                </ul>
-            {% endblock %}
+        {% block messages %}
+            <ul class="unstyled messages">
+                {% for message in messages %}
+                    <li class="alert{% if message.tags %} alert-{{ message.tags }}{% endif %}">
+                        <strong>{{ message.tags|capfirst }}:</strong> {{ message|safe }}</li>
+                {% endfor %}
+                {% block extra_messages %}{% endblock %}
+            </ul>
+        {% endblock %}
 
-            {% block subnav %}{% endblock %}
-            {% block breadcrumb %}
-                <ul class="breadcrumb">
-                    <li><a href="/">Home</a> <span class="divider">|</span></li>
-                    <li>{% page_attribute "title" %}</li>
-                </ul>
-            {% endblock %}
-            {% block title_section %}
-                <div class="row title">
-                    <div class="span12">
-                        <h1 class="separator"><span>{% block title %}{% page_attribute "title" %}{% endblock %}</span>
-                        </h1>
-                    </div>
-                </div>
-            {% endblock %}
-
-            {% block content %}{% endblock %}
-        </div> <!-- /container -->
-
-        <div class="push"></div>
-    </div>
-
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="span4">
-                    <p>Find us on <a href="https://www.facebook.com/LandMatrix" target="_blank">facebook</a>, <a
-                            href="https://twitter.com/intent/user?screen_name=Land_Matrix">twitter</a> or <a
-                            href="http://eepurl.com/AHK0r" target="_blank">subscribe to the newsletter</a>.</p>
-                </div>
-                <div class="span4 center">
-                    <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" class="cc-icons" target="_blank"></a>
-                </div>
-                <div class="span4 right">
-                    <p>&copy; {% now "Y" %}, LANDMATRIX.ORG</p>
+        {% block subnav %}{% endblock %}
+        {% block breadcrumb %}
+            <ul class="breadcrumb">
+                <li><a href="/">Home</a> <span class="divider">|</span></li>
+                <li>{% page_attribute "title" %}</li>
+            </ul>
+        {% endblock %}
+        {% block title_section %}
+            <div class="row title">
+                <div class="span12">
+                    <h1 class="separator"><span>{% block title %}{% page_attribute "title" %}{% endblock %}</span>
+                    </h1>
                 </div>
             </div>
+        {% endblock %}
+
+        {% block content %}{% endblock %}
+    </div> <!-- /container -->
+
+    <div class="push"></div>
+</div>
+
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="span4">
+                <p>Find us on <a href="https://www.facebook.com/LandMatrix" target="_blank">facebook</a>, <a
+                        href="https://twitter.com/intent/user?screen_name=Land_Matrix">twitter</a> or <a
+                        href="http://eepurl.com/AHK0r" target="_blank">subscribe to the newsletter</a>.</p>
+            </div>
+            <div class="span4 center">
+                <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" class="cc-icons" target="_blank"></a>
+            </div>
+            <div class="span4 right">
+                <p>&copy; {% now "Y" %}, LANDMATRIX.ORG</p>
+            </div>
         </div>
-    </footer>
+    </div>
+</footer>
 
-    {% block footer_scripts %}
-        <script src="/media/js/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script src="/media/js/legacy/main.js"></script>
-        <!-- Piwik -->
-        <script type="text/javascript">
-            var _paq = _paq || [];
-            _paq.push(['trackPageView']);
-            _paq.push(['enableLinkTracking']);
-            (function () {
-                var u = (("https:" == document.location.protocol) ? "https" : "http") + "://stats.landmatrix.org//";
-                _paq.push(['setTrackerUrl', u + 'piwik.php']);
-                _paq.push(['setSiteId', 1]);
-                var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
-                g.type = 'text/javascript';
-                g.defer = true;
-                g.async = true;
-                g.src = u + 'piwik.js';
-                s.parentNode.insertBefore(g, s);
-            })();
+{% block footer_scripts %}
+    <script src="/media/js/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
 
-        </script>
-        <noscript><p><img src="http://stats.landmatrix.org/piwik.php?idsite=1" style="border:0" alt=""/></p></noscript>
-        <!-- End Piwik Code -->
-    {% endblock %}
-    {% render_block "js" %}
+    <script src="/media/js/legacy/main.js"></script>
+    <!-- Piwik -->
+    <script type="text/javascript">
+        var _paq = _paq || [];
+        _paq.push(['trackPageView']);
+        _paq.push(['enableLinkTracking']);
+        (function () {
+            var u = (("https:" == document.location.protocol) ? "https" : "http") + "://stats.landmatrix.org//";
+            _paq.push(['setTrackerUrl', u + 'piwik.php']);
+            _paq.push(['setSiteId', 1]);
+            var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
+            g.type = 'text/javascript';
+            g.defer = true;
+            g.async = true;
+            g.src = u + 'piwik.js';
+            s.parentNode.insertBefore(g, s);
+        })();
+
+    </script>
+    <noscript><p><img src="http://stats.landmatrix.org/piwik.php?idsite=1" style="border:0" alt=""/></p></noscript>
+    <!-- End Piwik Code -->
+{% endblock %}
+{% render_block "js" %}
 
 </body>
 </html>
