--- a/templates/menu.html
+++ b/templates/menu.html
@@ -2,7 +2,7 @@
 <!-- base menu -->
 {% for child in children %}
     <li>
-        <a class="{{ child.get_menu_title|slugify }} toggle-tooltip navbar-inverse"
+        <a class="{{ child.get_menu_title|slugify }} toggle-tooltip"
             title="{% trans child.get_menu_title %}"
             href="{{ child.get_absolute_url }}">
             {% trans child.get_menu_title %}
