--- a/global_app/templates/deal-detail.html
+++ b/global_app/templates/deal-detail.html
@@ -125,16 +125,19 @@
           <div id="collapse{{forloop.counter}}" class="panel-collapse collapse in">
             <div class="panel-body">
               {% for item in history %}
-                <p>{{ item }}</p>
+                <p>
+                  {% if forloop.counter == 1 %}<strong>{% endif %}
+                  {{ item.activity.history_date }} {{ item.activity_changed_by }}
+                  {{ item.activity }}
+                  history id: {{ item.activity.history_id }}
+                  {% if forloop.counter == 1 %}</strong>{% endif %}
+                  {% if not forloop.last %}
+                    <a href="#">compare with previous version</a>
+                  {% endif %}
+                </p>
               {% endfor %}
-              <p>{{ history|length }}</p>
             </div>
           </div>
-        {% else %}
-          <p>Nope, no history!</p>
-          <p>Deal: {{ deal.id }} {{ deal.activity_identifier }}</p>
-          <p>{{ history }}</p>
-          <p>{{ history|length }}</p>
         {% endif %}
 
       </div>
