--- a/global_app/templates/deal-detail.html
+++ b/global_app/templates/deal-detail.html
@@ -125,18 +125,32 @@
           <div id="collapse{{forloop.counter}}" class="panel-collapse collapse in">
             <div class="panel-body">
 
-              {% for date, item in history.items %}
-                <p>
-                  {% if forloop.counter == 1 %}<strong>{% endif %}
-                  {{ date }} {{ item.activity_changed_by }}
-                  {{ item.activity }}
-                  history id: {{ item.activity.history_id }}
-                  {% if forloop.counter == 1 %}</strong>{% endif %}
-                  {% if not forloop.last %}
-                    <a href="#">compare with previous version</a>
-                  {% endif %}
-                </p>
-              {% endfor %}
+              <table>
+                {% for date, item in history.items %}
+                  <tr>
+                    <td>
+                      {% if forloop.counter == 1 %}<strong>{% endif %}
+                        {{ date }}
+                      {% if forloop.counter == 1 %}</strong>{% endif %}
+                    </td>
+                    <td>{{ item.activity_changed_by }}</td>
+                    <td>activity identifier: {{ item.activity.activity_identifier }}</td>
+                    <td>availability: {{ item.activity.availability }}</td>
+                    <td>history id: {{ item.activity.history_id }}</td>
+
+                    <td>
+                      {% if not forloop.last %}
+                        {# TODO: include as AJAX call #}
+                        <a href="/en/global/compare/{{item.activity.activity_identifier}}_{{item.activity_history_date}}/x/">
+                          compare with previous version
+                        </a>
+                      {% else %}
+                        first version
+                      {% endif %}
+                    </td>
+                  </tr>
+                {% endfor %}
+              </table>
             </div>
           </div>
         {% endif %}
