--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load i18n cms_tags %}{% load cms_tags sekizai_tags %}<!DOCTYPE html>
+{% load i18n cms_tags %}{% load cms_tags sekizai_tags %}{% load menu_tags %}<!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -40,12 +40,12 @@
 
     <link rel="stylesheet" href="/media/js/vendor/bootstrap/dist/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="/media/js/vendor/bootstrap/dist/css/bootstrap-theme.min.css"> -->
-    <link rel="stylesheet" href="/media/js/vendor/font-awesome/css/font-awesome.min.css">
     <!-- <link rel="stylesheet" href="/media/css/legacy/main.css"> -->
-    <link rel="stylesheet" href="/media/css/legacy/content.css">
+    <link rel="stylesheet" href="/media/css/content.css">
+    <link rel="stylesheet" href="/media/css/icons.css">
     <link rel="icon" href="/media/img/favicon.ico">
 
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'> -->
     {% if is_pdf_export %}
         <link rel="stylesheet" href="/media/landmatrix/css/htmltopdf.css" type="text/css" media="screen"
               title="no title" charset="utf-8">{% endif %}
@@ -86,21 +86,27 @@
 
             <div class="collapse navbar-collapse" id="main-navbar-collapse">
                 <ul class="nav navbar-nav navbar-left">
-                    <li><a href="/global"><span class="fa-spacer fa-globe"></span>Global</a></li>
-                    <li class="dropdown">
+                     <li><a href="/global"><span class="lm-spacer lm-globe"></span>Global</a></li>
+                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                           aria-expanded="false"><span class="fa-spacer fa-map-marker"></span>Regions <span
+                           aria-expanded="false"><span class="lm-spacer lm-regions"></span>Regions <span
                                 class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>
                                 <form role="form">
                                     <div class="form-group has-feedback">
-                                        <input type="text" class="form-control" placeholder="Search countries"/>
+                                        <input type="text" class="form-control" placeholder="Search"/>
                                         <i class="form-control-feedback glyphicon glyphicon-search"></i>
                                     </div>
                                 </form>
                             </li>
-                            <li role="separator" class="divider"></li>
+                             <ul class="dropdown-menu">
+                                        {% block nav %}
+
+                                            {% show_menu 1 1 0 0 "menu.html" %}
+
+                                        {% endblock %}
+                             </ul>
                             <li>Region 1</li>
                             <li role="separator" class="divider"></li>
                             <li>Region 2</li>
@@ -110,28 +116,29 @@
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                           aria-expanded="false"><span class="fa-spacer fa-flag"></span>Countries <span
+                           aria-expanded="false"><span class="lm-spacer lm-flag"></span>Countries <span
                                 class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>
                                 <form role="form">
                                     <div class="form-group has-feedback">
-                                        <input type="text" class="form-control" placeholder="Search countries"/>
+                                        <input type="text" class="form-control" placeholder="Search"/>
                                         <i class="form-control-feedback glyphicon glyphicon-search"></i>
                                     </div>
                                 </form>
                             </li>
-                            <li role="separator" class="divider"></li>
                             <li>Observatory 1</li>
+                            <li role="separator" class="divider"></li>
                             <li>Observatory 2</li>
                             <li role="separator" class="divider"></li>
                             <li>Country 1</li>
+                            <li role="separator" class="divider"></li>
                             <li>Country 2</li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                           aria-expanded="false"><span class="fa-spacer fa-plus-circle"></span>Get Involved <span
+                           aria-expanded="false"><span class="lm-spacer lm-plus-circle"></span>Get Involved <span
                                 class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="add-deal">Report a deal</a></li>
@@ -144,13 +151,12 @@
 
 
                 </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="badge">?</span></a></li>
-                    <li><a href="#"><span class="badge"><span class="fa fa-envelope"></span></span></a></li>
-                    <li><a href="#"><span class="badge">en</span></a></li>
+                <ul class="nav navbar-default navbar-nav navbar-right">
+                    <li><a href="#" role="button"><span class="badge">?</span></a></li>
+                    <li><a href="#" role="button"><span class="badge"><span class="fa lm-envelope"></span></span></a></li>
+                    {% language_chooser "language_chooser.html" %}
                 </ul>
             </div>
-
             {% block user_tools %}{% endblock %}
         {% endblock %}
     </div>
@@ -232,7 +238,7 @@
                 <ul class="list-unstyled">
                     <li><h4>About</h4></li>
                     <li><a href="">About Land Matrix</a></li>
-                    <li><a href="">The JLC Partnership</a></li>
+                    <li><a href="">The ILC Partnership</a></li>
                     <li><a href="">Data policy</a></li>
                     <li><a href="">Get in touch</a></li>
                 </ul>
@@ -244,18 +250,18 @@
         <div class="row">
             <div class="col-md-4">
                 <h4>Spread the word and share land matrix</h4>
-                <a href="https://twitter.com/Land_Matrix"><span class="fa-twitter-square"></span>
-                <a href="https://www.facebook.com/LandMatrix"><span class="fa-facebook-square"></span></a>
+                <a href="https://twitter.com/Land_Matrix"><span class="lm-twitter-square"></span>
+                <a href="https://www.facebook.com/LandMatrix"><span class="lm-facebook-square"></span></a>
             </div>
             <div class="col-md-4 center">
                 <h4>Share and adapt</h4>
                 <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" class="cc-icons" target="_blank"></a>
-                <a href="https://github.com/sinnwerkstatt/landmatrix"><span class="fa-github-square"></span></a>
+                <a href="https://github.com/sinnwerkstatt/landmatrix"><span class="lm-github-square"></span></a>
                 <p>&copy; {% now "Y" %}, LANDMATRIX.ORG</p>
             </div>
             <div class="col-md-4 right">
                 <h4>Sign up to receive updates</h4>
-                <a href="http://eepurl.com/AHK0r"><span class="fa-envelope"></span></a>
+                <a href="http://eepurl.com/AHK0r"><span class="lm-envelope"></span></a>
             </div>
         </div>
     </div>
